syntax = "proto3";

option csharp_namespace = "Presentation.Protos";

message Product {
  int64 id = 1;
  string product_name = 2;
  double product_price = 3;
}

message CreateProductRequest {
  string product_name = 1;
  double product_price = 2;
}

message CreateProductSuccess {
  int64 product_id = 1;
}

message ValidationError {
  string message = 1;
}

message ProductNameAlreadyExists {
  string message = 1;
}

message InvalidPrice {
  string message = 1;
}

message SaveFailed {
  string message = 1;
}

message CreateProductResponse {
  oneof result {
    CreateProductSuccess success = 1;
    ValidationError validation_error = 2;
    ProductNameAlreadyExists name_exists = 3;
    InvalidPrice invalid_price = 4;
    SaveFailed save_failed = 5;
  }
}

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}